Alignment fix for all pages

--- a/src/main/webapp/assets/styles/style.css
+++ b/src/main/webapp/assets/styles/style.css
@@ -188,3 +188,9 @@ md-tabs[md-border-bottom] md-tabs-wrapper {
     min-height: 45px !important;
     max-height: 50px !important;
 }
+
+.details{
+	bottom:70px; 
+	width:100%; 
+	margin-top: 80px;
+}
